<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textSize="25dp"
        android:textColor="#000000"
        android:layout_marginBottom="10dp"
         />

    <EditText
        android:id="@+id/inputA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/timA"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:id="@+id/inputB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/timB"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:onClick="panggilNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btMulai"
        android:background="#fa8c38"
        android:layout_marginBottom="10dp"
        />

</LinearLayout>